[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "latency"
path = "src/bin/latency.rs"

[lib]
name = "matching_engine"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
